// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GroupRow handles high member count and moderator role 1`] = `
<View>
  <Image
    source={
      Object {
        "uri": undefined,
      }
    }
  />
  <ForwardRef
    onPress={[Function]}
  >
    <Text>
      Greater Place
    </Text>
  </ForwardRef>
  <Icon
    name="Star"
  />
  <Text>
    24.5k
  </Text>
  <Icon
    name="Members"
  />
</View>
`;

exports[`GroupRow matches the last snapshot 1`] = `
<View>
  <Image
    source={
      Object {
        "uri": undefined,
      }
    }
  />
  <ForwardRef
    onPress={[Function]}
  >
    <Text>
      Great Place
    </Text>
  </ForwardRef>
  <Text>
    432
  </Text>
  <Icon
    name="Members"
  />
</View>
`;

exports[`MemberDetails matches the last snapshot 1`] = `<Loading />`;

exports[`MemberDetails returns Loading when there's no person 1`] = `<Loading />`;

exports[`MemberGroups matches the last snapshot 1`] = `null`;

exports[`MemberSkills matches the last snapshot 1`] = `
<View>
  <View>
    <Text>
      MY SKILLS
    </Text>
  </View>
  <ForwardRef
    disabled={true}
  >
    <View>
      <Text>
        RUN
      </Text>
      <Text>
        ALL
      </Text>
      <Text>
        DAY
      </Text>
    </View>
  </ForwardRef>
</View>
`;
